# email_extractor_agent

./: .env  .env.example  Makefile  PROJECT_OVERVIEW.md  README.md  pyproject.toml
.tokens/: gmail.json
app/: __init__.py  main.py
app/api/: __init__.py  ingest.py  quotes.py  reprocess.py  threads.py  vendors.py
app/core/: config.py  logging.py  security.py
app/db/: models.py  session.py
app/db/crud/: __init__.py  emails.py  quotes.py  vendors.py
app/extract/: llm.py  normalize.py  pipeline.py  prefilter.py  prompts.py
app/gmail/: client.py  ingest.py  parsers.py
app/local/: __init__.py  ingest.py
app/schemas/: dto.py
app/workers/: jobs.py  queue.py
migrations/: README  env.py
migrations/versions/: 0001_initial.py
postman/: Email_Elchemy.postman_collection.json
sample/: 2.eml  3.eml
scripts/: bootstrap_db.py  dev_ingest.py  local_ingest.py  run_worker.py
tests/integration/: test_pipeline_process.py
tests/unit/: test_llm_schema.py  test_normalize.py  test_parsers.py  test_prefilter.py
